Table algorithms {
  id bigint [pk, increment]
  name varchar(50) [not null, unique]
  type varchar(20) [not null, note: 'SYMMETRIC / ASYMMETRIC']
  mode varchar(50)
  description text
  default_key_size int
  is_active boolean [not null, default: true]
  created_at timestamp [default: `CURRENT_TIMESTAMP`]
}

Table frameworks {
  id bigint [pk, increment]
  name varchar(100) [not null, unique]
  version varchar(50)
  language varchar(50)
  description text
  is_active boolean [not null, default: true]
  created_at timestamp [default: `CURRENT_TIMESTAMP`]
}

Table keys_storage {
  id bigint [pk, increment]
  name varchar(100) [not null]
  algorithm_id bigint [not null]
  key_type varchar(20) [not null, note: 'SYMMETRIC / PUBLIC / PRIVATE']
  key_size int [not null]
  key_path varchar(255)
  key_value_encrypted text
  created_at timestamp [default: `CURRENT_TIMESTAMP`]
  expires_at timestamp
  is_active boolean [not null, default: true]
}

Table files {
  id bigint [pk, increment]
  original_name varchar(255) [not null]
  original_path varchar(500) [not null]
  encrypted_path varchar(500)
  decrypted_path varchar(500)
  file_extension varchar(20)
  size_bytes bigint [not null]
  checksum varchar(128)
  status varchar(20) [not null, default: 'UPLOADED', note: 'UPLOADED / ENCRYPTED / DECRYPTED / FAILED']
  uploaded_at timestamp [default: `CURRENT_TIMESTAMP`]
}

Table crypto_operations {
  id bigint [pk, increment]
  file_id bigint [not null]
  algorithm_id bigint [not null]
  key_id bigint [not null]
  framework_id bigint [not null]
  operation_type varchar(20) [not null, note: 'ENCRYPT / DECRYPT']
  started_at timestamp [not null, default: `CURRENT_TIMESTAMP`]
  ended_at timestamp
  duration_ms bigint
  success boolean [not null, default: false]
  error_message text
}

Table performance_metrics {
  id bigint [pk, increment]
  operation_id bigint [not null]
  execution_time_ms bigint [not null]
  memory_usage_kb bigint
  cpu_usage_percent decimal(5,2)
  file_size_bytes bigint [not null]
  notes text
}

Ref: keys_storage.algorithm_id > algorithms.id
Ref: crypto_operations.file_id > files.id
Ref: crypto_operations.algorithm_id > algorithms.id
Ref: crypto_operations.key_id > keys_storage.id
Ref: crypto_operations.framework_id > frameworks.id
Ref: performance_metrics.operation_id > crypto_operations.id

Records algorithms(id, name, type, mode, default_key_size) {
  1, 'AES', 'SYMMETRIC', 'CBC', 256
  2, 'RSA', 'ASYMMETRIC', null, 2048
}

Records frameworks(id, name, version, language) {
  1, 'OpenSSL', '3.x', 'C / CLI'
  2, 'BouncyCastle', '1.78', 'Java'
}

Records keys_storage(id, name, algorithm_id, key_type, key_size, key_path) {
  1, 'AES_Main_Key', 1, 'SYMMETRIC', 256, '/keys/aes_main.key'
  2, 'RSA_Public_Key', 2, 'PUBLIC', 2048, '/keys/rsa_public.pem'
  3, 'RSA_Private_Key', 2, 'PRIVATE', 2048, '/keys/rsa_private.pem'
}
